<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dip" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="2"
        android:padding="3dip"
        android:shrinkColumns="1"
        android:stretchColumns="0" >

        <TableRow android:id="@+id/old_passwd" >

            <TextView
                android:id="@+id/old_passwd_text"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/old_pw"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/old_passwd_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minWidth="200dp" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow android:id="@+id/new_passwd" >

            <TextView
                android:id="@+id/new_passwd_text"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/new_pw"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/new_passwd_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minWidth="200dp" >
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/confirm_passwd_text"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/confirm_pw"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/confirm_passwd_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minWidth="200dp" >
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/warning_text"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:textColor="#FFFF0000"
                android:textSize="12sp" />
        </TableRow>

        <TableRow android:id="@+id/relatives_number_new" >

            <TextView
                android:id="@+id/relatives_number_text"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/text_reletives"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/relatives_number_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:minWidth="200dp" >
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/warning_relatives_text"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:textColor="#FFFF0000"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>