<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_container"
    android:layout_width="@dimen/switch_dialog_width"
    android:layout_height="0dp"
    android:background="@drawable/dialog_full_holo_light">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <!--ImageView
            android:layout_width="@dimen/switch_dialog_alear_icon_size"
            android:layout_height="@dimen/switch_dialog_alear_icon_size"
            android:layout_marginLeft="@dimen/list_item_padding_left"
            android:background="@drawable/dialog_alert" /-->

        <TextView
            android:id="@+id/tv_switch_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/switch_dialog_title"
            android:textColor="@color/black"
            android:textSize="@dimen/switch_dialog_title_text_size" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/ll_title"
        android:background="@drawable/list_divider_holo_dark" />

    <TextView
        android:id="@+id/tv_switch_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_line"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:text="@string/switch_dialog_msg"
        android:textColor="@color/black"
        android:textSize="@dimen/switch_dialog_content_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1.0"
            android:background="@drawable/btn_selected"
            android:gravity="center"
            android:text="@string/switch_dialog_ok_button"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/btn_selected"
            android:gravity="center"
            android:text="@string/switch_dialog_cancel_button"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>