<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width"
        android:background="@drawable/list_divider_holo_dark" />

    <LinearLayout
        android:id="@+id/ll_main_switch_page_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="5dip"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/permission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/permission"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="@dimen/main_page_divider_width"
            android:layout_height="@dimen/main_page_divider_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/list_divider_holo_dark" />

        <TextView
            android:id="@+id/application"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/application"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="@dimen/main_page_divider_width"
            android:layout_height="@dimen/main_page_divider_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/list_divider_holo_dark" />

        <TextView
            android:id="@+id/log"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/log"
            android:textSize="20sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:layout_marginTop="3dp"
            android:background="@drawable/list_divider_holo_dark" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginBottom="2dp"
            android:background="@color/title_selected_color" />
    </FrameLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_container"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>
